Add missing services